# GovPilot-AI

./: README.md
GenAI/: pyproject.toml
GenAI/agents/: orchestrator_agent.py  regulation_agent.py  web_discovery_agent.py
GenAI/config/: agent_llm_models.py
GenAI/prompts/: orchestrator_prompt.py  orchestrator_prompy.py  regulation_agent_prompt.py  web_discovery_prompt.py
GenAI/states/: Regulation_agent_structure.py  agent_state.py  web_discovery_structure.py
GenAI/testing/: GOVPIL_1.MD  GOVPIL_2.MD  REGULA_1.PY
GenAI/tools/: browser_session.py  bs4_scrapper.py  playwright_tools.py  test_script.py
GenAI/utills/: agent_routing.py
GenAI/workflows/: graph.py
frontend/: package-lock.json  package.json  tailwind.config.ts  take_screenshots.js
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/chat/[sessionId]/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(marketing)/: page.tsx
frontend/src/components/: DocumentChecklist.tsx  LogoutButton.tsx  SessionHeader.tsx  ThemeToggle.tsx  WorkflowTracker.tsx
frontend/src/components/cards/: ConfirmationCard.tsx  DocumentRequestCard.tsx  DocumentStatusCard.tsx  StepPlanCard.tsx  StructuredCard.tsx
frontend/src/components/ui/: bento-grid.tsx  hover-border-gradient.tsx  magic-card.tsx  markdown.tsx  message.tsx  prompt-input.tsx  resizable-navbar.tsx  ripple.tsx  shine-border.tsx
frontend/src/hooks/: useChatStream.ts
(+4 files in other folders)
