[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "crawl4ai>=0.9.2",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "lxml>=6.1.1",
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
